--- a/index.html
+++ b/index.html
@@ -7,5 +7,13 @@
 </head>
 <body>
     <h1>heading one </h1>
+    <p>my paragraph </p>
+
+<ul>
+    <li>item 1</li>
+    <li>item 2</li>
+    <li>item 3</li>
+    <li>item 4</li>
+</ul>
 </body>
 </html>
